# daily-genai

./: README.md
RAG/hr-helpdesk/experiments/: datagenerator.ipynb  pyproject.toml
RAG/hr-helpdesk/generated_data/: AI_Tool_Usage_Policy.md  Anti-discrimination-policy.md  AttendancePolicy.md  BYOD_Policy.md  Bereavement-leave-company-policy.md  Business_Continuity_Policy.md  COVID-19_mandatory_vaccination_and_workplace_safety_policy_template.md  Code-of-ethics-policy.md  Company-Holiday-policy-template_(1).md  Company-Holiday-policy.md  Company-Overtime-Policy-Sample.md  Company-car-policy-Template.md  Company-cyber-security-policy-template-1.md  Company-data-protection-policy.md  Company-social-media-policy-for-employees.md  Company_Assets_Policy.md  Company_Credit_Card_Policy.md  Company_Email_Usage_Policy.md  Company_Travel_Policy.md  Coronavirus-COVID-19-company-policy.md  Corporate_Gifting_Policy.md  Data_Privacy_Act_India_Policy_Template.md  Disciplinary_Policy.md  Diversity,_Equity,_and_Inclusion_Policy.md  Drug-testing-policy.md  Employee-Assistance-Program-policy-template.md  Employee-Attendance-Policy.md  Employee-Background-Check-Policy-Sample.md  Employee-Benefits-and-Perks.md  Employee-Business-Expense-Policy.md  Employee-Probationary-Period-Policy.md  Employee-Wellness-Program-Policy.md  Employee-resignation-policy.md  Employee_Break_Policy.md  Employee_Classification_Policy.md  Employee_Code_of_Conduct_Policy.md  Employee_Confidentiality_Policy.md  Employee_Conflict_of_Interest_Policy.md  Employee_Discount_Policy.md  (+78 more)
RAG/project_1/: main.py  pyproject.toml
(+394 files in other folders)
